# lz1aq-loop-control

./: CMakeLists.txt  Kconfig  README.md  main.c  my_w5500.conf  my_w5500.overlay  prj.conf  sections-rom.ld
boards/: esp32_devkitc_procpu.overlay
dts/bindings/: relay.yaml
src/: main.c  wifi.c  wifi.h
src/www/: index.html
